<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_rectangle_elt"
    android:id="@+id/car_details">

    <TextView
        android:id="@+id/car"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/car"
        android:textSize="12sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nb"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        android:text="4.2"
        android:textColor="@color/yellow"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vues"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        android:text="(25 utilisateurs)"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/img_car"
        android:layout_width="374dp"
        android:layout_height="237dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/car_pic" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="411dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522">

        <TextView
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="231dp"
            android:text="@string/general"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/speed"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_speed_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/vitesse"
                android:textColor="@color/gray2"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/speed"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/engine"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_local_gas_station_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="Fuel"
                android:textColor="@color/gray2"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fuel_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="Super"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/seat"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="245dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_airline_seat_recline_normal_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/places"
                android:textColor="@color/gray2"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/seat"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="413dp"
        android:layout_height="242dp"
        android:background="@drawable/car_pic_brg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985">

        <TextView
            android:id="@+id/spec"
            android:layout_width="116dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="200dp"
            android:text="@string/spec"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/circle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="360dp"
            app:srcCompat="@drawable/circle" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button_bgr2"
            android:gravity="center"
            android:text="@string/book"
            android:textAlignment="center"

            android:textColor="@color/gray"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="368dp"
            android:background="@color/gray2" />

        <TextView
            android:id="@+id/prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="150dp"
            android:text="@string/overview"
            android:textColor="@color/gray2"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="52dp"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="28dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/matricule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mat"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/marque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/mat_v" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="52dp"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="28dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/eng_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/marque" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="52dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="28dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Color"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/val_col"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Noir" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="52dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="28dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_hr"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/price_hr"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_jr"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/price_jr"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>